class registration working, class login NOT WORKING

--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -41,6 +41,7 @@
             <a class="dropdown-item" href="{{ url_for('auth.studentlogin') }}">Student Login</a>
             <a class="dropdown-item" href="{{ url_for('auth.teacherlogin') }}">Teacher Login</a>
             <a class="dropdown-item" href="{{ url_for('auth.register') }}">Register</a>
+            <a class="dropdown-item" href="{{ url_for('auth.registerclass') }}">Register Classroom</a>
           </div>
         </li>
       </ul>
