--- a/flaskr/templates/auth/studentlogin.html
+++ b/flaskr/templates/auth/studentlogin.html
@@ -1,18 +1,18 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Log into your account{% endblock %}</h1>
+  <h1>{% block title %}Log into your classroom{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
 <form>
   <div>
-    <label>Email address</label>
-    <input type="email" id="inputEmail1" placeholder="Enter email">
+    <label>Class Name</label>
+    <input type="text" class="form control" id="name" placeholder="Enter class name" name="classname">
   </div>
   <div>
-    <label>Password</label>
-    <input type="password" id="inputPassword1" placeholder="Password">
+    <label>Passcode</label>
+    <input type="password" class="form control" id="inputPassword1" placeholder="Password" name="password">
   </div>
   <button type="submit">Submit</button>
 </form>
