Added to home.html and about.html pages

--- a/flaskr/templates/review/home.html
+++ b/flaskr/templates/review/home.html
@@ -1,21 +1,12 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Mean Reviews{% endblock %}</h1>
+  <h1>{% block title %}The New Standard in Instant Online Feedback{% endblock %}</h1>
 {% endblock %}
 {% block content %}
+    <p>Welcome! To get started, please select an option from the task bar.</p>
   <blockquote class="blockquote">
-    <p class="mb-0">This paper is more appropriate ... in terrible 
-                    papers.</p>
-    <footer class="blockquote-footer">From @thirdreviewer</footer>
+    <p class="mb-0">"This app is awesome! The prototype blows my mind."</p>
+    <footer class="blockquote-footer">From a user, probably</footer>
 </blockquote>
-  <blockquote>
-    Before I can recommend acceptance, I request the following 272 
-    changes to the manuscript. - From @thirdreviewer
-  </blockquote>
-  <blockquote>
-    Let me begin by apologizing for being so late with this review – 
-    it took me much longer than expected to figure out how best to 
-    insult all the authors. - From @thirdreviewer
-  </blockquote>
 {% endblock %}
