--- a/flaskr/templates/review/about.html
+++ b/flaskr/templates/review/about.html
@@ -1,9 +1,10 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}About us{% endblock %}</h1>
+  <h1>{% block title %}About Us{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
-  <p>We collect mean reviews.</p>
+  <p>Instructors today have many options to provide digital feedback to their students, but many are either expensive, difficult to use, inaccessible, or all of the above. Our mission is to create a free, accessible instant feedback system. With translation and text-to-speech, NimbleKnow allows educators
+  to reach out to all of their students and give meaningful feedback. We are four undergraduate students at Western Washington University with a drive to create something more meaningful for instructors and students.</p>
 {% endblock %}
