added question box

--- a/flaskr/templates/review/home.html
+++ b/flaskr/templates/review/home.html
@@ -1,21 +1,17 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Mean Reviews{% endblock %}</h1>
+  <h1>{% block title %}Question Board{% endblock %}</h1>
 {% endblock %}
 {% block content %}
   <blockquote class="blockquote">
-    <p class="mb-0">This paper is more appropriate ... in terrible 
-                    papers.</p>
-    <footer class="blockquote-footer">From @thirdreviewer</footer>
+    <p class="mb-0">How do I use a for loop?.</p>
+    <footer class="blockquote-footer">From @student1</footer>
 </blockquote>
   <blockquote>
-    Before I can recommend acceptance, I request the following 272 
-    changes to the manuscript. - From @thirdreviewer
+    Which data structure should I use? - From @student2
   </blockquote>
   <blockquote>
-    Let me begin by apologizing for being so late with this review – 
-    it took me much longer than expected to figure out how best to 
-    insult all the authors. - From @thirdreviewer
+    What's a "syntax" error? - From @student3
   </blockquote>
 {% endblock %}
