--- a/flaskr/templates/review/question.html
+++ b/flaskr/templates/review/question.html
@@ -1,6 +1,19 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Write a Question{% endblock %}</h1>
+<div class="container">
+  <h1>{% block title %}Ask a question!{% endblock %}</h1>
+</div>
 {% endblock %}
-
+{% block content %}
+<div class="container">
+  <form method="post">
+    <div class="form-group">
+      <label for="exampleFormControlTextarea1">Your question:</label>
+      <textarea class="form-control" rows="3" name="review-text">
+      </textarea>
+    </div>
+    <button class="btn btn-primary" type="submit">Submit</button>
+  </form>
+</div>
+{% endblock %}
