--- a/flaskr/templates/review/home.html
+++ b/flaskr/templates/review/home.html
@@ -1,17 +1,12 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Question Board{% endblock %}</h1>
+  <h1>{% block title %}The New Standard in Instant Online Feedback{% endblock %}</h1>
 {% endblock %}
 {% block content %}
+    <p>Welcome! To get started, please select an option from the task bar.</p>
   <blockquote class="blockquote">
-    <p class="mb-0">How do I use a for loop?.</p>
-    <footer class="blockquote-footer">From @student1</footer>
+    <p class="mb-0">"This app is awesome! The prototype blows my mind."</p>
+    <footer class="blockquote-footer">From a user, probably</footer>
 </blockquote>
-  <blockquote>
-    Which data structure should I use? - From @student2
-  </blockquote>
-  <blockquote>
-    What's a "syntax" error? - From @student3
-  </blockquote>
 {% endblock %}
