--- a/flaskr/templates/review/create.html
+++ b/flaskr/templates/review/create.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block header %}
 <div class="container">
-  <h1>{% block title %}Write a new Question{% endblock %}</h1>
+  <h1>{% block title %}Ask a Question!{% endblock %}</h1>
 </div>
 {% endblock %}
 {% block content %}
