--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -17,11 +17,7 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          {% if session.get('user_id') is none %}
           <a class="nav-link" href="{{ url_for('review.home') }}">Home <span class="sr-only">(current)</span></a>
-          {% else %}
-          <a class="nav-link" href="{{ url_for('review.dashboard') }}">Home <span class="sr-only">(current)</span></a>
-          {% endif %}
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{ url_for('review.create') }}">Make Question</a>
@@ -31,28 +27,19 @@
           </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            {% if session.get('user_id') is none %}
-              Login
-            {% else %}
-              My Account
-              {% endif %}
+            Login
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            {% if session.get('user_id') is none %}
-              <a class="dropdown-item" href="{{ url_for('auth.studentlogin') }}">Student Login</a>
-              <a class="dropdown-item" href="{{ url_for('auth.teacherlogin') }}">Teacher Login</a>
-              <a class="dropdown-item" href="{{ url_for('auth.register') }}">Teacher Register</a>
-            {% else %}
-            <a class="dropdown-item" href="{{ url_for('auth.logout') }}">Logout</a>
+            <a class="dropdown-item" href="{{ url_for('auth.studentlogin') }}">Student Login</a>
+            <a class="dropdown-item" href="{{ url_for('auth.teacherlogin') }}">Teacher Login</a>
+            <a class="dropdown-item" href="{{ url_for('auth.register') }}">Register</a>
             <a class="dropdown-item" href="{{ url_for('auth.registerclass') }}">Register Classroom</a>
-            {% endif %}
           </div>
         </li>
       </ul>
     </div>
   </nav>
 
-  
 
 <section class="content">
   <header>
