--- a/flaskr/templates/review/response.html
+++ b/flaskr/templates/review/response.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block header %}
 <div class="container">
-  <h1>{% block title %}Write a Response{% endblock %}</h1>
+  <h1>{% block title %}{ {question_id }}{% endblock %}</h1>
 </div>
 {% endblock %}
 
