still not working

--- a/flaskr/templates/review/CreateMultipleChoice.html
+++ b/flaskr/templates/review/CreateMultipleChoice.html
@@ -13,19 +13,40 @@
     
     <p class="lead">Add options:</p>
 
-    <form class="form-inline">
-        <label class="sr-only" for="inlineFormInputName2">Label</label>
-        <input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputName2" placeholder="A" name="option-label">
-      
-        <label class="sr-only" for="inlineFormInputGroupUsername2">Option</label>
-        <div class="input-group mb-2 mr-sm-2">
-          <div class="input-group-prepend">
-          <input type="text" class="form-control" id="inlineFormInputGroupUsername2" placeholder="The color blue" name="option-content">
-        </div>
-      
-      
-        <button type="submit" class="btn btn-primary mb-2">Add</button>
-      </form>
+    <div class="input-group mb-2">
+      <div class="input-group-prepend">
+        <div class="input-group-text">A</div>
+      </div>
+      <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Enter Option" name="A">
+    </div>
+
+    <div class="input-group mb-2">
+      <div class="input-group-prepend">
+        <div class="input-group-text">B</div>
+      </div>
+      <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Enter Option" name="B">
+    </div>
+
+    <div class="input-group mb-2">
+      <div class="input-group-prepend">
+        <div class="input-group-text">C</div>
+      </div>
+      <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Enter Option" name="C">
+    </div>
+
+    <div class="input-group mb-2">
+      <div class="input-group-prepend">
+        <div class="input-group-text">D</div>
+      </div>
+      <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Enter Option" name="D">
+    </div>
+
+    <div class="input-group mb-2">
+      <div class="input-group-prepend">
+        <div class="input-group-text">E</div>
+      </div>
+      <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Enter Option" name="E">
+    </div>
 
 
 
