--- a/flaskr/templates/review/mcresponse.html
+++ b/flaskr/templates/review/mcresponse.html
@@ -1,9 +1,19 @@
-{% extends 'review/create.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
 <div class="container">
   <form method="post">
     <div class="form-group">
+
+      {% block choices %}
+        <p class="lead">Questions:</p>
+        {% for option in options %}
+        <div class="custom-control custom-radio">
+          <input type="radio" id="customRadio1" name="customRadio" class="custom-control-input">
+          <label class="custom-control-label" for="customRadio1"> {{option['label']}} {{option['content']}}</label>
+        </div>
+        {% endfor %}
+      {% endblock %}
 
     <label for="exampleFormControlTextarea1">Your Question:</label>
       <div class="custom-control custom-radio">
