--- a/flaskr/templates/review/studentclassroom.html
+++ b/flaskr/templates/review/studentclassroom.html
@@ -9,6 +9,9 @@
 {% block content %}
 <p class="lead">Questions:</p>
 {% for question in questions %}
+<div class="container">
+  <h1>{% block another %}Welcome, Student!{% endblock %}</h1>
+</div>
   <blockquote class="blockquote">
     <a class="btn btn-primary" href="{{ url_for('review.response', question_id=question['id'], classname=question['classname']) }}" role="button">{{question['content']}}</a>
   </blockquote>
