--- a/flaskr/templates/review/mcresponse.html
+++ b/flaskr/templates/review/mcresponse.html
@@ -1,19 +1,24 @@
 {% extends 'base.html' %}
 
+
+
+
 {% block content %}
 <div class="container">
   <form method="post">
     <div class="form-group">
 
       {% block choices %}
-        <p class="lead">Questions:</p>
+        <p class="lead">Options:</p>
         {% for option in options %}
         <div class="custom-control custom-radio">
           <input type="radio" id="customRadio1" name="customRadio" class="custom-control-input">
-          <label class="custom-control-label" for="customRadio1"> {{option['label']}} {{option['content']}}</label>
+          <label class="custom-control-label" for="customRadio1"> {{option['label']}}</label>
         </div>
         {% endfor %}
       {% endblock %}
+
+      
 
     <label for="exampleFormControlTextarea1">Your Question:</label>
       <div class="custom-control custom-radio">
@@ -26,9 +31,6 @@
       </div>
     </div>
 
-    <label for="exampleFormControlTextarea2">Class:</label>
-      <textarea class="form-control" rows="1" name="class">   
-      </textarea>
 
 
     <button class="btn btn-primary" type="submit">Submit</button>
