--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -30,7 +30,7 @@
             <a class="nav-link" href="{{ url_for('review.about') }}">About</a>
           </li>
       <li class="nav-item">
-            <a class="nav-link" href="#">Translate</a>
+            <a class="nav-link" href="#" id="google_translate_element"></a>
           </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
