Finised designing the webpage

--- a/flaskr/templates/auth/login.html
+++ b/flaskr/templates/auth/login.html
@@ -13,7 +13,8 @@
   <div>
     <label>Password</label>
     <input type="password" id="inputPassword1" placeholder="Password">
+<input type="submit" value="Log In" class="btn btn-outline-info">
   </div>
-  <button type="submit">Submit</button>
+
 </form>
 {% endblock %}
