--- a/flaskr/templates/auth/registerclass.html
+++ b/flaskr/templates/auth/registerclass.html
@@ -13,7 +13,7 @@
   <div>
     <label>Passcode</label>
     <input type="password" class="form control" id="classroom-password" placeholder="Passcode" name="password">
+    <input type="submit" value="Log In" class="btn btn-outline-info">
   </div>
-  <button type="submit">Submit</button>
 </form>
 {% endblock %}
