--- a/flaskr/templates/review/dashboard.html
+++ b/flaskr/templates/review/dashboard.html
@@ -11,7 +11,7 @@
 
 <p class="lead">Here are your classrooms:</p>
 {% for classroom in classrooms %}
-  <blockquote class="blockquote">
+  <blockquote class="blockquote" style="text-align:center">
     <a class="btn btn-primary" href="{{ url_for('review.classroom', classname=classroom['classname']) }}" role="button">{{classroom['classname'] }}</a>
   </blockquote>
   
