--- a/flaskr/templates/auth/studentlogin.html
+++ b/flaskr/templates/auth/studentlogin.html
@@ -14,7 +14,7 @@
   <div>
     <label for="password">Passcode</label>
     <input type="password" name="password" id="password" required>
-    <input type="submit" value="Log In">
+    <input type="submit" value="Log In" class="btn btn-outline-info">
 
   </div>
   
