--- a/flaskr/templates/auth/teacherlogin.html
+++ b/flaskr/templates/auth/teacherlogin.html
@@ -13,8 +13,8 @@
   <div>
     <label for="password">Password</label>
     <input type="password" name="password" id="password" placeholder="Password" required>
+    <input type="submit" value="Log In" class="btn btn-outline-info">
   </div>
-  <button type="submit" value="Log In">Submit</button>
 </form>
 {% endblock %}
 
