--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -8,6 +8,71 @@
 
 <!doctype html>
 
+<style>
+
+html {
+  height: 100%;
+}
+body{
+  background-image: linear-gradient(to bottom, white, #00adb5);
+    background-repeat: no-repeat;
+}
+p{
+  color: #393e46;
+  text-align: center;
+  margin-right: 20%;
+  margin-left: 20%;
+}
+/* .box {
+  background: rgba(204,207,204, .6);
+  margin-right: 17%;
+  margin-left: 17%;
+  height: auto;
+} */
+
+h1{
+  color: #00adb5;
+  text-align: center;
+  font-weight: bold;
+  margin:0;
+  /* text-shadow: 0.5px 0.5px 0.5px black; */
+}
+label{
+  color: #393e46;
+  margin-left: 40%;
+}
+footer{
+  color: #393e46;
+  margin-left: 40%;
+}
+button{
+ border: 3px solid rgba(190,194,196, .4);
+}
+.btn-group{
+  margin-left: 40%;
+  width: 30%;
+  height: 15%;
+
+  font-size: 18px;
+
+}
+
+.btn-group button:not(:last-child) {
+  border-right: none; /* Prevent double borders */
+}
+
+button:hover:not(.active) {
+  background: rgba(0, 173, 181, .2);
+}
+.nav-link:hover:not(.active) {
+  background: rgba(0, 173, 181, .2);
+}
+
+.dropdown-item:hover:not(.active) {
+   background: rgba(0, 173, 181, .2);
+}
+</style>
+
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">NimbleKnow</a>
