--- a/flaskr/templates/review/studentclassroom.html
+++ b/flaskr/templates/review/studentclassroom.html
@@ -9,7 +9,7 @@
 {% block content %}
 <p class="lead">Questions:</p>
 {% for question in questions %}
-  <blockquote class="blockquote">
+  <blockquote class="blockquote" style="text-align:center">
     <a class="btn btn-primary" href="{{ url_for('review.response', question_id=question['id'], classname=question['classname']) }}" role="button">{{question['content'] }}</a>
   </blockquote>
 {% endfor %}
