--- a/flaskr/templates/review/response.html
+++ b/flaskr/templates/review/response.html
@@ -1,14 +1,15 @@
 {% extends 'base.html' %}
 {% block header %}
 <div class="container">
-  <h1>{% block title %}{ {question_id }}{% endblock %}</h1>
+  <h1>{% block title %}
+         {{ q_content}}
+        {% endblock %}
+    </h1>
 </div>
 {% endblock %}
 
+
 {% block content %}
-<blockquote class="blockquote">
-    <p class="mb-0" > {{ question['content'] }}</p>
-</blockquote>
 
 <div class="container">
   <form method="post">
