--- a/flaskr/templates/review/responses.html
+++ b/flaskr/templates/review/responses.html
@@ -11,6 +11,29 @@
 {% endblock %}
 
 {% block content %}
+<canvas id="myChart"></canvas>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.bundle.js"></script>
+<script>
+  var ctx = document.getElementById('myChart').getContext('2d');
+  var chart = new Chart(ctx, {
+      // The type of chart we want to create
+      type: 'bar',
+
+      // The data for our dataset
+      data: {
+          labels: ['A', 'B', 'C', 'D'],
+          datasets: [{
+              label: 'Number of responses',
+              backgroundColor: 'rgb(255, 99, 132)',
+              borderColor: 'rgb(255, 99, 132)',
+              data: [5, 10, 4, 7, 3]
+          }]
+      },
+
+      // Configuration options go here
+      options: {}
+  });
+</script>
     <blockquote class="blockquote">
       <p class="lead" > Responses</p>
      </blockquote>
@@ -20,5 +43,3 @@
   </blockquote>
 {% endfor %}
 {% endblock %}
-
- 
