--- a/flaskr/templates/review/classroom.html
+++ b/flaskr/templates/review/classroom.html
@@ -11,7 +11,7 @@
 {% for question in questions %}
   <blockquote class="blockquote" style="text-align:center">
     <p class="mb-0" > {{ question['content'] }}</p>
-    <a class="btn btn-primary" href="{{ url_for('review.responses', question_id=question['id'], classname=question['classname']) }}" role="button">Responses</a>
+    <a class="btn btn-outline-info" href="{{ url_for('review.responses', question_id=question['id'], classname=question['classname']) }}" role="button">Responses</a>
   </blockquote>
 {% endfor %}
  
