--- a/flaskr/templates/review/createlongresponse.html
+++ b/flaskr/templates/review/createlongresponse.html
@@ -12,7 +12,7 @@
       <textarea class="form-control" rows="1" name="class">   
       </textarea>
     </div>
-    <button class="btn btn-primary" type="submit">Submit</button>
+    <button class="btn btn-outline-info" type="submit">Submit</button>
   </form>
 </div>
 {% endblock %}
