--- a/flaskr/templates/review/mcresponse.html
+++ b/flaskr/templates/review/mcresponse.html
@@ -54,7 +54,7 @@
         
   
 
-    <button class="btn btn-primary" type="submit">Submit</button>
+    <button class="btn btn-outline-info" type="submit">Submit</button>
   </form>
 </div>
 
