--- a/flaskr/templates/review/response.html
+++ b/flaskr/templates/review/response.html
@@ -18,7 +18,7 @@
       <textarea class="form-control" rows="3" name="response-text">   
       </textarea>
     </div>
-    <button class="btn btn-primary" type="submit">Submit</button>
+    <button class="btn btn-outline-info" type="submit">Submit</button>
   </form>
 </div>
 {% endblock %}
