--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -97,13 +97,21 @@ button:hover:not(.active) {
       
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            {% if session.get('user_id') is none %}
             Login
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          {% else %}
+            My Account
+            {% endif %}
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          {% if session.get('user_id') is none %}
             <a class="dropdown-item" href="{{ url_for('auth.studentlogin') }}">Student Login</a>
             <a class="dropdown-item" href="{{ url_for('auth.teacherlogin') }}">Teacher Login</a>
-            <a class="dropdown-item" href="{{ url_for('auth.register') }}">Register</a>
-            <a class="dropdown-item" href="{{ url_for('auth.registerclass') }}">Register Classroom</a>
+            <a class="dropdown-item" href="{{ url_for('auth.register') }}">Teacher Register</a>
+          {% else %}
+          <a class="dropdown-item" href="{{ url_for('auth.logout') }}">Logout</a>
+          <a class="dropdown-item" href="{{ url_for('auth.registerclass') }}">Register Classroom</a>
+          {% endif %}
           </div>
         </li>
         <li class="nav-item">
