--- a/flaskr/templates/review/CreateMultipleChoice.html
+++ b/flaskr/templates/review/CreateMultipleChoice.html
@@ -50,12 +50,7 @@
 
 
 
-    <label for="exampleFormControlTextarea2">Class:</label>
-      <textarea class="form-control" rows="1" name="class">   
-      </textarea>
-
-
-    <button class="btn btn-primary" type="submit">Submit</button>
+    <button class="btn btn-outline-info" type="submit">Submit</button>
   </form>
 </div>
 {% endblock %}
