--- a/flaskr/templates/review/classroom.html
+++ b/flaskr/templates/review/classroom.html
@@ -2,7 +2,7 @@
 
 {% block header %}
 <div class="container">
-  <h1>{% block title %}Your Classroom{% endblock %}</h1>
+  <h1>{% block title %}{{classname}}{% endblock %}</h1>
 </div>
 {% endblock %}
 
