--- a/flaskr/templates/review/create.html
+++ b/flaskr/templates/review/create.html
@@ -5,7 +5,7 @@
 </div>
 {% endblock %}
 {% block content %}
-<div class="dropdown">
+<div class="dropdown" style="text-align:center">
   <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     Question Type
   </button>
