--- a/flaskr/templates/review/mcresponse.html
+++ b/flaskr/templates/review/mcresponse.html
@@ -51,13 +51,13 @@
       </div>
       {% endif %}
       {%endblock%}
-        
-  
 
-    <button class="btn btn-outline-info" type="submit">Submit</button>
+
+    <div style="text-align:center">
+      <button class="btn btn-outline-info" type="submit">Submit</button>
+    </div>
   </form>
 </div>
 
 
 {% endblock %}
-
