made buttons contrast a bit more

--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -71,6 +71,12 @@ button:hover:not(.active) {
 .dropdown-item:hover:not(.active) {
    background: rgba(0, 173, 181, .2);
 }
+
+.btn-outline-info {
+  color:#565554;
+
+border-color: #565554;
+}
 </style>
 
 
