--- a/flaskr/templates/review/home.html
+++ b/flaskr/templates/review/home.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}The New Standard in Instant Online Feedback{% endblock %}</h1>
+  <h1>{% block title %}Welcome to NimbleKnow{% endblock %}</h1>
 {% endblock %}
 {% block content %}
-    <p>Welcome! To get started, please select an option from the task bar.</p>
+    <p>To get started, please select an option from the task bar.</p>
   <blockquote class="blockquote">
     <p class="mb-0">"This app is awesome! The prototype blows my mind."</p>
     <footer class="blockquote-footer">From a user, probably</footer>
@@ -15,4 +15,3 @@
   <a  class="btn btn-outline-info btn-lg" href="{{ url_for('auth.studentlogin') }}" role="button">Student Login</a>
 </div>
 {% endblock %}
-
