--- a/flaskr/templates/auth/register.html
+++ b/flaskr/templates/auth/register.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Register an account{% endblock %}</h1>
+  <h1>{% block title %}Teacher Account Registration{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
