--- a/flaskr/templates/auth/studentlogin.html
+++ b/flaskr/templates/auth/studentlogin.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Log into your classroom{% endblock %}</h1>
+  <h1>{% block title %}Student Login{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
@@ -17,7 +17,7 @@
     <input type="submit" value="Log In" class="btn btn-outline-info">
 
   </div>
-  
+
 </form>
 
 {% endblock %}
