--- a/flaskr/templates/auth/teacherlogin.html
+++ b/flaskr/templates/auth/teacherlogin.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Log into your account{% endblock %}</h1>
+  <h1>{% block title %}Teacher Login{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
@@ -17,5 +17,3 @@
   </div>
 </form>
 {% endblock %}
-
-
