--- a/flaskr/templates/review/mcresponses.html
+++ b/flaskr/templates/review/mcresponses.html
@@ -12,7 +12,7 @@
 
 {% block content %}
     <blockquote class="blockquote">
-      <p class="lead" > Responses</p>
+      <h1> Responses</h1>
      </blockquote>
 {% for option in options %}
   <blockquote class="blockquote">
