--- a/flaskr/templates/review/CreateMultipleChoice.html
+++ b/flaskr/templates/review/CreateMultipleChoice.html
@@ -4,14 +4,13 @@
 <div class="container">
   <form method="post">
     <div class="form-group">
-
     <label for="exampleFormControlTextarea1">Your Question:</label>
-
-    <textarea class="form-control" rows="3" name="question-text">   
+    <textarea class="form-control" rows="3" name="question-text">
     </textarea>
 
-    
-    <p class="lead">Add options:</p>
+    <div style="text-align:center">
+      <p>Add options:</p>
+    </div>
 
     <div class="input-group mb-2">
       <div class="input-group-prepend">
