fixed format for creating mc

--- a/flaskr/templates/review/create.html
+++ b/flaskr/templates/review/create.html
@@ -5,8 +5,8 @@
 </div>
 {% endblock %}
 {% block content %}
-<div class="dropdown" style="text-align:center">
-  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+<div class="dropdown" style="text-align:center; margin-top: 15px;">
+  <button class="btn btn-outline-info dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     Question Type
   </button>
   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
