--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -23,50 +23,43 @@ body{
 p{
   color: #393e46;
   text-align: center;
+}
+.customP{
   margin-right: 20%;
   margin-left: 20%;
 }
-/* .box {
-  background: rgba(204,207,204, .6);
-  margin-right: 17%;
-  margin-left: 17%;
-  height: auto;
-} */
-
 h1{
   color: #00adb5;
   text-align: center;
   font-weight: bold;
   margin:0;
-  /* text-shadow: 0.5px 0.5px 0.5px black; */
 }
+
 label{
   color: #393e46;
   margin-left: 40%;
 }
+
 footer{
   color: #393e46;
   margin-left: 40%;
 }
+
 button{
  border: 3px solid rgba(190,194,196, .4);
 }
+
 .btn-group{
   margin-left: 40%;
   width: 30%;
   height: 15%;
-
   font-size: 18px;
-
 }
 
 .btn-group button:not(:last-child) {
   border-right: none; /* Prevent double borders */
 }
 
-button:hover:not(.active) {
-  background: rgba(0, 173, 181, .2);
-}
 .nav-link:hover:not(.active) {
   background: rgba(0, 173, 181, .2);
 }
@@ -77,13 +70,12 @@ button:hover:not(.active) {
 
 .btn-outline-info {
   color:#565554;
-
-border-color: #565554;
+  border-color: #565554;
 }
 </style>
 
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light"  style='background:white;'>
     <a class="navbar-brand" href="#" style="color:#00adb5"><b>NimbleKnow</b></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
