--- a/flaskr/templates/review/CreateMultipleChoice.html
+++ b/flaskr/templates/review/CreateMultipleChoice.html
@@ -4,13 +4,13 @@
 <div class="container">
   <form method="post">
     <div class="form-group">
-    <label for="exampleFormControlTextarea1">Your Question:</label>
+    <label for="exampleFormControlTextarea1" style = "margin-left:0%">Your Question:</label>
     <textarea class="form-control" rows="3" name="question-text">
     </textarea>
 
-    <div style="text-align:center">
-      <p>Add options:</p>
-    </div>
+
+      <p style="margin-left:0%; margin-top:40px; text-align:left">Add options:</p>
+
 
     <div class="input-group mb-2">
       <div class="input-group-prepend">
