--- a/flaskr/templates/review/about.html
+++ b/flaskr/templates/review/about.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <body>
-  <p>Instructors today have many options to provide digital feedback to their students, but many are either expensive, difficult to use, inaccessible, or all of the above. Our mission is to create a free, accessible instant feedback system. With translation and text-to-speech, NimbleKnow allows educators
+  <p class = 'customP'>Instructors today have many options to provide digital feedback to their students, but many are either expensive, difficult to use, inaccessible, or all of the above. Our mission is to create a free, accessible instant feedback system. With translation and text-to-speech, NimbleKnow allows educators
   to reach out to all of their students and give meaningful feedback. We are four undergraduate students at Western Washington University with a drive to create something more meaningful for instructors and students.</p>
     </body>
 {% endblock %}
